# UniprotWebParser

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
example/: parse_beta_diann_mol_wt_example.ipynb  parse_beta_mol_wt_asyncio_example.ipynb  parse_beta_mol_wt_example.ipynb  parse_mol_wt_example.ipynb
tests/: test_betaparser.py  test_cli.py
uniprotparser/: __init__.py  betaparser.py  cli.py  parser.py
