[tool.poetry]
name = "uniprotparser"
version = "1.0.9"
description = "Getting Uniprot Data from Uniprot Accession ID through Uniprot REST API"
authors = ["Toan K. Phung <toan.phungkhoiquoctoan@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["uniprot", "protein sequence", "database", "parser"]
repository = "https://github.com/noatgnu/UniprotWebParser"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pandas = "^1.4.2"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

